# aoc2022

./: .gitignore  CHANGELOG.md  README.md  aoc2022.cabal  day09.txt  new-day.sh  package.yaml  run-day.sh  stack.yaml  tags
app/: Main.hs
asd/aoc2023/: aoc2023.cabal
src/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Utils.hs
test/: Day01Spec.hs  Day01Test.hs  Day02Spec.hs  Day02Test.hs  Day03Spec.hs  Day03Test.hs  Day04Spec.hs  Day04Test.hs  Day05Spec.hs  Day05Test.hs  Day06Spec.hs  Day06Test.hs  Day07Spec.hs  Day07Test.hs  Day08Spec.hs  Day08Test.hs  Day09Spec.hs  Day09Test.hs  Day10Spec.hs  Day10Test.hs  Day11Spec.hs  Day12Spec.hs  Day13Spec.hs  Day14Spec.hs  Day15Spec.hs  TestUtils.hs  Tests.hs
test/inputs/: day01.txt  day02.txt  day03.txt  day04.txt  day05.txt  day06.txt  day07.txt  day08.txt  day09.txt  day10.txt  day11.txt  day12.txt  day13.txt  day14.txt  day15.txt
