cabal-version:      3.0
name:               aoc2022
version:            0.1.0.0
synopsis:

homepage: https://

license:            NONE
author:             Tebi
maintainer:

-- A copyright notice.
-- copyright:
category:           Development
extra-source-files: CHANGELOG.md
data-files: test/inputs/*.txt, src/inputs/*.txt

common libraries

library
    default-language: Haskell2010
    build-depends:    base ^>=4.17.2.0
    other-modules: Paths_aoc2022
    exposed-modules:
        Day01,
        Day02,
        Day03,
        Day04,
        Day05,
        Day06,
        Day07,
        Day08,
    hs-source-dirs: src

executable aoc2022
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.0,
        aoc2022
    other-modules: Paths_aoc2022
    hs-source-dirs:   app
    default-language: Haskell2010

common tests-common
    default-language: Haskell2010
    other-modules: Paths_aoc2022, TestUtils
    hs-source-dirs:   test
    build-depends: base ^>=4.17.2.0, HUnit ^>=1.6.2.0, aoc2022

test-suite tests
    import: tests-common
    type:             exitcode-stdio-1.0
    main-is:          Tests.hs

test-suite day01-test
    import: tests-common
    type:             exitcode-stdio-1.0
    main-is:          Day01Test.hs

test-suite day02-test
    import: tests-common
    type:             exitcode-stdio-1.0
    main-is:          Day02Test.hs

test-suite day03-test
    import: tests-common
    type:             exitcode-stdio-1.0
    main-is:          Day03Test.hs

test-suite day04-test
    import: tests-common
    type:             exitcode-stdio-1.0
    main-is:          Day04Test.hs

test-suite day05-test
    import: tests-common
    type:             exitcode-stdio-1.0
    main-is:          Day05Test.hs

test-suite day06-test
    import: tests-common
    type:             exitcode-stdio-1.0
    main-is:          Day06Test.hs

test-suite day07-test
    import: tests-common
    type: exitcode-stdio-1.0
    main-is: Day07Test.hs

test-suite day08-test
    import: tests-common
    type: exitcode-stdio-1.0
    main-is: Day08Test.hs
